--- a/styles/sass/_menu.scss
+++ b/styles/sass/_menu.scss
@@ -6,33 +6,30 @@ MENU
     display: flex;
     flex-direction: column;
     align-items: center;
-    .genreBox {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
     h3 {
-        color: $secondary-color;
+        text-align: center;
         letter-spacing: 2px;
         font-size: 1.5rem;
     }
 }
-.genreList {
+
+.genreContainer {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 20px 0;
-    li {
-        margin: 5px;
+    flex-direction: column;
+    align-items: center;
+
+    .genreList {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 20px 0;
+        li {
+            margin: 5px;
+        }
     }
 }
 
-.searchButton {
-    width: 50%;
-    max-width: 360px;
-}
-
-.yearBox {
+.yearContainer {
     width: 50%;
     max-width: 360px;
     margin: 3%;
@@ -71,15 +68,19 @@ MENU
     }
 }
 
-.advancedSearch {
-    margin: 3% 0;
+.advancedSettingsContainer {
     width: 100%;
-    background: rgba($search-background-color, 0.2);
-    border-radius: 8px;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
-    max-height: 0;
+    .advancedSettings {
+        margin: 3% 0;
+        width: 100%;
+        background: rgba($search-background-color, 0.2);
+        border-radius: 8px;
+        overflow: hidden;
+        transition: max-height 0.3s ease-out;
+        max-height: 0;
+    }
 }
+
 .slideContainer {
     width: 50%;
     margin: 3% auto;
@@ -95,12 +96,10 @@ MENU
         -webkit-appearance: none; 
         appearance: none;
         border-radius: 10px;  
-
         // For Firefox
         &::-moz-range-thumb {
             @include sliderStyle;
         }
-
         // For webkit
         &::-webkit-slider-thumb {
             -webkit-appearance: none;
@@ -110,3 +109,13 @@ MENU
     }
 }
 
+.searchButtonContainer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    .searchButton {
+        
+        width: 50%;
+        max-width: 360px;
+    }
+}
